# searxng-docker-tavily-adapter

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  config.example.yaml  docker-compose.override.yaml.example  docker-compose.yaml
searxng/: entrypoint-patch.sh  limiter.toml
searxng/engines/: reddit.py  reddit_api.py  sources_local.py
simple_tavily_adapter/: .dockerignore  Dockerfile  README.md  config_loader.py  engine_selector.py  main.py  pyproject.toml  tavily_client.py  test_anticaptcha.py  test_client.py  test_curl.sh  test_docker.py  test_markdown.py  test_smart_engines.py  test_tavily_client.py  test_unit.py
